<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_reversed"
    tools:context=".Pages.RegisterActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_circle_corner"
        android:backgroundTint="#00688B"
        android:text="Register"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <EditText
        android:id="@+id/userNameInput"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_dark_circle"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-black"
        android:text="Register"
        android:textColor="#00688B"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <Button
        android:id="@+id/BackImageButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_circle_corner"
        android:text="Login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/EmailInput"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_dark_circle"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.450" />

    <EditText
        android:id="@+id/PasswordInput"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_dark_circle"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <EditText
        android:id="@+id/DOBInput"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_dark_circle"
        android:ems="10"
        android:hint="DateOfBirth"
        android:inputType="date"
        android:paddingLeft="10dp"
        android:text=""
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <Button
        android:id="@+id/Date_Picker"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_circle_corner"
        android:backgroundTint="#00688B"
        android:text="Picker"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <EditText
        android:id="@+id/PhoneInput"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_dark_circle"
        android:ems="10"
        android:hint="Phone"
        android:inputType="phone"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.660" />

</androidx.constraintlayout.widget.ConstraintLayout>